fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   background-image: url(images/banner.jpg);
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 110vh;
 }
 
 
